--- a/Project/appsettings.Development.json
+++ b/Project/appsettings.Development.json
@@ -9,5 +9,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=VALENTIN_PC;Initial Catalog=Proiect;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "AppSettings": {
+    "JwtSecret": "ProiectDAW"
   }
 }
