--- a/Project/appsettings.Development.json
+++ b/Project/appsettings.Development.json
@@ -11,6 +11,6 @@
     "DefaultConnection": "Data Source=VALENTIN_PC;Initial Catalog=Proiect;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "AppSettings": {
-    "JwtSecret": "ProiectDAW"
+    "JwtToken": "ProiectDAW"
   }
 }
